2011-12-08  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>  (tiny change)

	* coding.c (encode_coding_ccl): Check (charbuf < charbuf_end)
	after the loop to call ccl_driver at least once (Bug#8619).

2011-12-08  Kenichi Handa  <handa@m17n.org>

	* ftfont.c (get_adstyle_property): Fix previous change
	(Bug#10233).

2011-12-07  Juanma Barranquero  <lekktu@gmail.com>

	* w32.c (init_environment): If no_site_lisp, remove site-lisp
	dirs from the default value of EMACSLOADPATH (bug#10208).

2011-12-07  Glenn Morris  <rgm@gnu.org>

	* lread.c (init_lread): If no_site_lisp, exclude site-lisp/ in
	installation and source directories as well.  (Bug#10208)

2011-12-06  Chong Yidong  <cyd@gnu.org>

	* minibuf.c (Fread_from_minibuffer): Doc fix (Bug#10228).

2011-12-06  Glenn Morris  <rgm@gnu.org>

	* process.c (start_process_unwind): Treat any pid <= 0, except -2,
	as an error, not just -1.  (Bug#10217)

2011-12-05  Chong Yidong  <cyd@gnu.org>

	* keyboard.c (process_special_events): New function.
	(swallow_events, Finput_pending_p): Use it (Bug#10195).

2011-12-05  Paul Eggert  <eggert@cs.ucla.edu>

	* coding.c (encode_designation_at_bol): Don't use uninitialized
	local variable (Bug#9318).

2011-12-05  Kenichi Handa  <handa@m17n.org>

	* ftfont.c (get_adstyle_property): If the font is not BDF nor PCF,
	return Qnil (Bug#8046, Bug#10193).

2011-12-05  Kenichi Handa  <handa@m17n.org>

	* coding.c (encode_designation_at_bol): New args charbuf_end and
	dst.  Return the number of produced bytes.  Callers changed.
	(coding_set_source): Return how many bytes coding->source was
	relocated.
	(coding_set_destination): Return how many bytes
	coding->destination was relocated.
	(CODING_DECODE_CHAR, CODING_ENCODE_CHAR, CODING_CHAR_CHARSET)
	(CODING_CHAR_CHARSET_P): Adjusted for the avove changes.

2011-12-05  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>  (tiny change)

	* coding.c (CODING_CHAR_CHARSET_P): New macro.
	(encode_coding_emacs_mule, encode_coding_iso_2022): Use the above
	macro (Bug#9318).
